Calculated more SMA and EMA days